--- a/templates/security/security/login.html.twig
+++ b/templates/security/security/login.html.twig
@@ -17,7 +17,9 @@
                       <input type="submit" class="fadeIn fourth" value="Zaloguj">
                       <input type="hidden" name="{{ path('user_home_page')}}" value="/account" />
                       <div class="text-danger">
-                        {{ error }}
+                        {% if error %}
+                        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                        {% endif %}
                       </div>
                       </form>
                       <div class="form_footer">
