--- a/templates/standard_user/standard_user/user_trainers.html.twig
+++ b/templates/standard_user/standard_user/user_trainers.html.twig
@@ -1,4 +1,5 @@
 {% extends "base.html.twig" %}
+{% set menu_name = "user_trainer" %}
 {% use "menu_user_home_page.html.twig" %}
 {% block content %}
         <div class="background" id="background">
