--- a/templates/trainer_user/trainer_user/trainer_users.html.twig
+++ b/templates/trainer_user/trainer_user/trainer_users.html.twig
@@ -1,10 +1,14 @@
 {% extends "base.html.twig" %}
+{% set menu_name = "trainer_user" %}
 {% use "menu_trainer_home_page.html.twig" %}
 {% block content %}
         <div class="background" id="background">
         {% include "flash_messages.html.twig" %}
         <div class="main_content">
           <div class="center_content">
+                <div class="d-flex pt-3 pr-3" style="">
+                  <a href="{{ path("show_all_plan_for_participants")}}" class="btn-sm btn-dark btn-block add_plan_btn text-center" role="button"><i class="fas fa-eye"></i> Pokaż wszystkie dostępy do planów</a>
+                </div>
             <div class="grid_panel">
               <div class="user_trainings_list">
                 <div class="row text-center pt-4 pl-4 pr-4 pb-4">
@@ -22,8 +26,8 @@
                     {% for user in invitationList %}
                     <tr>
                       <td>{{ user.firstName }} {{ user.lastName }}</td>
-                      <td><a href="{{ path("add_participant",{ 'user': user.idUser, 'invitation': user.id_invitation })}}" class="text-dark">Dodaj<i class="fas fa-eye fa-x2 pl-2"></i></a></td>
-                      <td><a href="#" class="text-dark">Odmów<i class="fas fa-eye fa-x2 pl-2"></i></a></td>
+                      <td><a href="{{ path("add_participant",{ 'user': user.idUser, 'invitation': user.id_invitation })}}" class="text-dark">Dodaj <i class="fas fa-user-plus"></i></a></td>
+                      <td><a href="{{ path("remove_invitation",{'invitation': user.id_invitation })}}" class="text-dark">Odmów <i class="fas fa-user-minus"></i></a></td>
                     </tr>
                     {% endfor %}
                     {% endif %}
@@ -46,9 +50,9 @@
                 {% for participant in participantList %}
                 <tr>
                   <td>{{ participant.firstName }} {{ participant.lastName }}</td>
-                  <td><a href="#" class="text-dark">Pokaż profil<i class="fas fa-eye fa-x2 pl-2"></i></a></td>
-                  <td><a href="{{ path("show_all_plan_for_user",{ 'user': participant.idUser })}}" class="text-dark">Pokaż wszystkie przypięte plany<i class="fas fa-eye fa-x2 pl-2"></i></a></td>
-                  <td><a href="{{ path("remove_participant",{ 'user': participant.idUser })}}" class="text-dark">Odepnij<i class="fas fa-eye fa-x2 pl-2"></i></a></td>
+                  <td><a href="{{ path("show_user_profile",{ 'user': participant.idUser })}}" class="text-dark">Pokaż profil <i class="fas fa-user-alt"></i></a></td>
+                  <td><a href="{{ path("show_all_plan_for_user",{ 'user': participant.idUser })}}" class="text-dark">Pokaż wszystkie przypięte plany <i class="fas fa-eye fa-x2 pl-2"></i></a></td>
+                  <td><a href="{{ path("remove_participant",{ 'user': participant.idUser })}}" class="text-dark">Odepnij <i class="fas fa-user-minus"></i></a></td>
                 </tr>
                 {% endfor %}
                 {% endif %}
