--- a/templates/training_plan/training_plan/show_training_plan_access_list.html.twig
+++ b/templates/training_plan/training_plan/show_training_plan_access_list.html.twig
@@ -1,4 +1,5 @@
 {% extends "base.html.twig" %}
+{% set menu_name = "training_plan" %}
 {% use "menu_trainer_home_page.html.twig" %}
 {% block content %}
         <div class="background" id="background">
@@ -25,7 +26,7 @@
                     {% for user in participantList %}
                     <tr>
                       <td>{{ user.firstName }} {{ user.lastName }}</td>
-                      <td><a href="{{ path("add_access_to_training_plan", {'participantUser': user.idUser, 'trainingPlan': trainingPlan.id })}}" class="text-dark">Dodaj dostęp<i class="fas fa-eye fa-x2 pl-2"></i></a></td>
+                      <td><a href="{{ path("add_access_to_training_plan", {'participantUser': user.idUser, 'trainingPlan': trainingPlan.id })}}" class="text-dark">Dodaj dostęp <i class="fas fa-plus"></i></a></td>
                     </tr>
                     {% endfor %}
                     {% endif %}
