--- a/templates/training_plan/training_plan/show_training_plan_list_for_user.html.twig
+++ b/templates/training_plan/training_plan/show_training_plan_list_for_user.html.twig
@@ -1,4 +1,5 @@
 {% extends "base.html.twig" %}
+{% set menu_name = "training_plan" %}
 {% use "menu_user_home_page.html.twig" %}
 {% block content %}
         <div class="background" id="background">
